# kafka-iceberg-ingest

./: Cargo.toml
apicurio-api/: Cargo.toml  README.md
apicurio-api/.openapi-generator/: FILES
apicurio-api/docs/: AdminApi.md  ArtifactMetaData.md  ArtifactReference.md  ArtifactRulesApi.md  ArtifactSearchResults.md  ArtifactState.md  ArtifactType.md  ArtifactsApi.md  ConfigurationProperty.md  ContentCreateRequest.md  DownloadRef.md  EditableMetaData.md  Error.md  GlobalRulesApi.md  IfExists.md  Limits.md  LogConfiguration.md  MetadataApi.md  NamedLogConfiguration.md  NamedLogConfigurationAllOf.md  RoleMapping.md  Rule.md  RuleViolationCause.md  RuleViolationError.md  RuleViolationErrorAllOf.md  SearchApi.md  SearchedArtifact.md  SearchedVersion.md  SortBy.md  SystemApi.md  SystemInfo.md  UpdateConfigurationProperty.md  UpdateRole.md  UpdateState.md  UserInfo.md  UsersApi.md  VersionMetaData.md  VersionSearchResults.md  VersionsApi.md
apicurio-api/src/apis/: admin_api.rs  artifact_rules_api.rs  artifacts_api.rs  configuration.rs  global_rules_api.rs  metadata_api.rs  mod.rs  search_api.rs  system_api.rs  users_api.rs  versions_api.rs
apicurio-api/src/models/: artifact_meta_data.rs  artifact_reference.rs  artifact_search_results.rs  artifact_state.rs  artifact_type.rs  configuration_property.rs  content_create_request.rs  download_ref.rs  editable_meta_data.rs  error.rs  if_exists.rs  limits.rs  log_configuration.rs  log_level.rs  mod.rs  named_log_configuration.rs  named_log_configuration_all_of.rs  role_mapping.rs  role_type.rs  rule.rs  (+15 more)
kafka-iceberg-ingest/: Cargo.toml
kafka-iceberg-ingest/example/: README.md
kafka-iceberg-ingest/src/: catalog.rs  lib.rs  main.rs  openid.rs  zipstream.rs
kafka-iceberg-ingest/src/arrow/: mod.rs  schema.rs
kafka-iceberg-ingest/src/catalog/: aws.rs  mod.rs
kafka-iceberg-ingest/src/schema/: mod.rs
xregistry-api/: Cargo.toml  README.md
xregistry-api/.openapi-generator/: FILES
xregistry-api/docs/: GroupsApi.md  RegistrationApi.md  SchemaGroup.md  SchemaId.md  SchemasApi.md  VersionsApi.md
(+9 files in other folders)
