[package]
name = "kafka-iceberg-ingest"
version = "0.1.0"
edition = "2021"

[features]
default = ["aws"]
aws = ["aws-config", "aws-sdk-sts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
apicurio-api = { path = "../apicurio-api" }
apache-avro = "0.14.0"
serde_json = "^1.0"
rdkafka = "0.31.0"
anyhow = "1.0.71"
futures = "0.3.28"
arrow = "40.0.0"
num-traits = "0.2.15"
iceberg-rust = { git = "https://github.com/JanKaul/iceberg-rust.git" }
iceberg-catalog-rest-metadata-file = { git = "https://github.com/dashbook/iceberg-catalog-rest-metadata-file.git" }
openidconnect = "3.2.0"
aws-sdk-sts = { version = "0.28.0", optional = true }
aws-config = { version = "0.55.3", optional = true }
